--- a/src/http/api/feed/swag/FeedByTrade.yaml
+++ b/src/http/api/feed/swag/FeedByTrade.yaml
@@ -6,13 +6,13 @@ get:
     type: integer
     description: |
       Get feed items that are added before *max_id* (inclusive) with applied sorting
-      [guide](https://weezlabs.atlassian.net/wiki/display/NET/pagination)
+      [guide](https://matmegat.atlassian.net/wiki/display/NET/pagination)
   - name: since_id
     in: query
     type: integer
     description: |
       Get feed items greater than *since_id* (non inclusive) with applied sorting
-      [guide](https://weezlabs.atlassian.net/wiki/display/NET/pagination)
+      [guide](https://matmegat.atlassian.net/wiki/display/NET/pagination)
   - name: page
     in: query
     type: integer
