--- a/cfg/config.json
+++ b/cfg/config.json
@@ -2,7 +2,7 @@
   "dev":  true,
   "env": "dev",
 
-  "host": "netvest",
+  "host": "envest",
   "port": 8080,
   "port_nginx": 8080,
 
@@ -11,8 +11,8 @@
     "host": "localhost",
     "port":  5432,
 
-    "database": "netvest",
-    "user": "netvest"
+    "database": "envest",
+    "user": "envest"
   },
 
   "redis":
@@ -35,7 +35,7 @@
       "http://localhost",
       "http://nevest.dev",
       "http://ec2-35-163-203-21.us-west-2.compute.amazonaws.com",
-      "http://dev.netvest.com"
+      "http://dev.envest.com"
     ],
     "ports":
     [
@@ -53,19 +53,17 @@
     "key": "IRsds6YbxE_bx1YHxpr1uw",
     "defaults":
     {
-      "host": "www.netvest.com",
-      "confirm_link": "netvest.com",
-      "password_link": "netvest.com",
-      "website_link": "netvest.com",
-      "feedback_link": "netvest.com",
-      "contact_email": "contact@netvest.com",
-      "ios_beta_app": "https://rink.hockeyapp.net/apps/dcb637f7a19541a4a00ec7dfbbfc7cca/app_versions/232",
-      "android_beta_app": "https://rink.hockeyapp.net/apps/95edc0834f3e484baad85ddd3148d777/app_versions/193",
-      "itunes_link": "https://itunes.apple.com/us/app/netvest/id1183348831?mt=8",
-      "play_market_link": "https://play.google.com/store/apps/details?id=com.netvest.netvestapp&hl=en",
-      "investor_panel_link": "api.netvest.com/admin/",
-      "terms_of_use_link": "netvest.com",
-      "privacy_policy_link": "netvest.com"
+      "host": "www.envest.com",
+      "confirm_link": "envest.com",
+      "password_link": "envest.com",
+      "website_link": "envest.com",
+      "feedback_link": "envest.com",
+      "contact_email": "contact@envest.com",
+      "itunes_link": "https://itunes.apple.com/us/app/",
+      "play_market_link": "https://play.google.com/store/apps/",
+      "investor_panel_link": "api.envest.com/admin/",
+      "terms_of_use_link": "envest.com",
+      "privacy_policy_link": "envest.com"
     }
   },
 
