--- a/src/http/api/auth/swag/Login.yaml
+++ b/src/http/api/auth/swag/Login.yaml
@@ -4,7 +4,7 @@ post:
   - name: payload
     description: |
       JSON payload to register / signup.
-      [Validations](https://weezlabs.atlassian.net/wiki/display/NET/Validations) will be applied
+      [Validations](https://matmegat.atlassian.net/wiki/display/NET/Validations) will be applied
     in: body
     required: true
     schema:
