--- a/src/http/api/promo/swag/Create.yaml
+++ b/src/http/api/promo/swag/Create.yaml
@@ -30,7 +30,7 @@ post:
     400:
       description: |
         **Error object** which follows
-        [Error Protocol](https://weezlabs.atlassian.net/wiki/display/NET/Errors)
+        [Error Protocol](https://matmegat.atlassian.net/wiki/display/NET/Errors)
       schema:
         $ref: ../../../swagger/Error.yaml
   tags:
