--- a/src/http/api/watchlist/swag/PutDelete-WatchlistInvestor.yaml
+++ b/src/http/api/watchlist/swag/PutDelete-WatchlistInvestor.yaml
@@ -32,7 +32,7 @@ put:
     400:
       description: |
         **Error object** which follows
-        [Error Protocol](https://weezlabs.atlassian.net/wiki/display/NET/Errors)
+        [Error Protocol](https://matmegat.atlassian.net/wiki/display/NET/Errors)
 
   tags:
   - watchlist
